Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-2956

cluster broker exits with "error deliveryRecord no update message."

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.8
    • 0.9
    • C++ Clustering
    • None

    Description

      See https://bugzilla.redhat.com/show_bug.cgi?id=655141

      Description of problem:

      A broker joining a cluster has "error deliveryRecord no update message" which
      leads to shutdown.

      Version-Release number of selected component (if applicable):1036871

      How reproducible: easy

      Steps to Reproduce:

      Apply attached patch to cluster_tests.py and do:
      make check TESTS=run_cluster_tests CLUSTER_TESTS="*dr_no_message"

      Actual results: broker exits with error

      Expected results: no error

      Additional info:

      Attachments

        Activity

          People

            aconway Alan Conway
            aconway Alan Conway
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: