QPID-2956: cluster broker exits with "error deliveryRecord no update message."

The following sequence of events was causing a broker joining the cluster to shutdown:
- a client acquires or browses a message with TTL set.
- the message expires.
- a new broker joins before the client has acknowledged the message.

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk@1037763 13f79535-47bb-0310-9956-ffa450edef68